# leaksensor

./: .cproject  .gitlab-ci.yml  .gitmodules  .project  CMakeLists.txt  README.md  SmartRoof.Lora.Node Debug.launch  build.cmd  default.jflash
app/: .cproject  .mxproject  .project  CMakeLists.txt  README.md  STM32F103ZETX_FLASH.ld  leakdetect.ioc  leakdetect_Debug.launch
app/Core/Inc/: FreeRTOSConfig.h  main.h  mav.h  reset.h  stm32f1xx_it.h
app/Core/Src/: freertos.c  main.c  reset.cpp  stm32f1xx_hal_msp.c  stm32f1xx_hal_timebase_tim.c  stm32f1xx_it.c  system_stm32f1xx.c
app/Debug/: makefile  objects.list  sources.mk
app/Debug/Core/Src/: freertos.cyclo  freertos.su  main.cyclo  main.su  subdir.mk
app/Debug/Core/Startup/: subdir.mk
app/Debug/Core/ThreadSafe/: newlib_lock_glue.cyclo  newlib_lock_glue.su  subdir.mk
app/Debug/Drivers/STM32F1xx_HAL_Driver/Src/: stm32f1xx_hal_rtc_ex.su  stm32f1xx_hal_spi.cyclo  stm32f1xx_hal_tim.cyclo  stm32f1xx_hal_tim.su  stm32f1xx_hal_tim_ex.cyclo  stm32f1xx_hal_uart.su  subdir.mk
boot/: STM32F103ZETX_FLASH.ld
boot/Debug/: bootloader.elf  bootloader.list  bootloader.map  makefile
boot/Debug/Core/Src/: main.cyclo  main.su  stm32f1xx_hal_msp.su
cmake/: stm32f1.cmake  toolchain-arm-none-eabi.cmake
doc/: SmartRoof.Lora.Node.ioc
doc/board/water-leak/: .gitignore  4 Layers (1,5mm 35um Tg150).stackup  4 layers.PcbDoc  current-source.SchDoc  jtag.Harness  jtag.SchDoc  modbus-rtu.SchDoc  owi.Harness  owi.SchDoc  power.SchDoc  sensor-conn.SchDoc  sensors.SchDoc  stm32wl-cpu.Harness  stm32wl-cpu.SchDoc  stm32wl-mcu.SchDoc  water-leak.Annotation  water-leak.BomDoc  water-leak.PrjPcb  water-leak.PrjPcb And water-leak.XLS  water-leak.PrjPcbStructure
doc/board/water-leak/__Previews/: Sheet1.SchDocPreview  current-source.SchDocPreview  flipflop-sim.SchDocPreview  jtag.SchDocPreview  modbus-rtu.SchDocPreview  power.SchDocPreview  sensor-conn.SchDocPreview  sensors.SchDocPreview  stm32wl-cpu.SchDocPreview
doc/board/water-leak/lib/: ADP160AUJZ-3P3-R7.IntLib  BQ35100PW.IntLib  BQ35100PW.LibPkg  BQ35100PWR.IntLib  ISO7731QDWRQ1.IntLib  LM334MNOPB.IntLib  LTC7138MPMSETRPBF.IntLib  MAX17682ATP&plus_.IntLib  ML-621SDN.IntLib  ML-621SDN.LibPkg  ML-621SDN.PcbLib  ML-621SDN.SchLib  RAK3172.IntLib  STM32WLE5CCU6.IntLib  STM32WL_UFQFPN48_Reference_Design.IntLib  SamacSys.PcbLib  SamacSys.SchLib
doc/board/water-leak/lib/BQ35100PW/: BQ35100PW.PcbLib  BQ35100PW.SchLib
doc/board/water-leak/lib/BQ35100PW/Project Outputs for BQ35100PW/: BQ35100PW.IntLib
doc/board/water-leak/lib/BQ35100PW1/: BQ35100PW.PcbLib  BQ35100PW.SchLib
doc/board/water-leak/lib/BQ35100PW2/: BQ35100PW.PcbLib  BQ35100PW.SchLib
doc/board/water-leak/lib/BQ35100PWR/: BQ35100PWR.SchLib
doc/board/water-leak/lib/BQ35100PWR1/: BQ35100PWR.SchLib
doc/board/water-leak/lib/LM334MNOPB/: LM334MNOPB.LibPkg  LM334MNOPB.SchLib
doc/board/water-leak/lib/ML-621SDN/: ML-621SDN.LibPkg  ML-621SDN.PcbLib  ML-621SDN.SchLib
doc/board/water-leak/lib/ML-621SDN1/: ML-621SDN.PcbLib  ML-621SDN.SchLib
doc/board/water-leak/lib/STM32WL_UFQFPN48_Reference_Design/: MB17201.PcbLib  STM32WL_UFQFPN48_Reference_Design.LibPkg  STM32WL_UFQFPN48_Reference_Design_1.SCHLIB
doc/board/water-leak/lib/STM32WL_UFQFPN48_Reference_Design1/: MB17201.PcbLib  STM32WL_UFQFPN48_Reference_Design_1.SCHLIB
doc/board/water-leak/lib/STM32WL_UFQFPN48_Reference_Design2/: MB17201.PcbLib  STM32WL_UFQFPN48_Reference_Design_1.SCHLIB
scripts/: cancat_firmware.sh
src/: CMakeLists.txt
src/apps/SmartRoof.LoRa.Node/: CMakeLists.txt
src/apps/SmartRoof.LoRa.Node/LeakDetector/SRWLD01/: lora.cpp  loranode.cpp  loranode.h  main.cpp  messagebus.cpp  messagebus.h  modbus.cpp  modbusnode.cpp  modbusnode.h  onewire.cpp  onewirenode.cpp  onewirenode.h  sensors.h  stm32F103xe_flash_bootloader.ld
src/apps/SmartRoof.LoRa.Node/common/: NvmDataMgmt.h  cli.c  cli.h
src/boards/: CMakeLists.txt  adc-board.h  board.h  eeprom.h  flash-board.h  pinName-board.h  rtc-board.h  uart-board.h  utilities.h
src/boards/SRWLD01/: CMakeLists.txt  adc-board.c  board-config.h  board.c  board.cpp  delay-board.c  eeprom-board.c  eeprom-data.s  eeprom.c  eeprom.cpp  eeprom.h  flash-board.cpp  flash-stm32.h  freertos.c  gpio-board.c  i2c-board.c  lpm-board.c  mav.h  modbus_callback.cpp  nonvol.cpp  nonvol.h  rtc-board.c  sensors-board.cpp  sensors-board.h  sensors.cpp  sensors.h  spi-board.c  sx1276mb1las-board.c  sysIrqHandlers.c  tickless.cpp  tid.h  uart-board.cpp
src/boards/SRWLD01/cmsis/: stm32f1xx_hal_conf.h
src/boards/SRWLD01/cmsis/arm-gcc/: stm32F103xe_flash.ld
src/boards/mcu/: utilities.cpp
src/boards/mcu/stm32/EEPROM_Emul/Core/: eeprom_emul.h
src/boards/mcu/stm32/EEPROM_Emul/Porting/STM32F1/: flash_interface.h
src/boards/mcu/stm32/cmsis/: cmsis_gcc.h
src/boot/: .cproject  CMakeLists.txt  README.md  STM32F103ZETX_FLASH.ld  bootloader.ioc
src/boot/Core/Inc/: hwinfo.h  main.h
src/boot/Core/Src/: main.c  stm32f1xx_hal_msp.c
src/boot/Debug/: bootloader.elf  bootloader.list  bootloader.map  objects.list
src/boot/Debug/Core/Src/: main.d  stm32f1xx_hal_msp.cyclo
src/boot/Debug/Core/Startup/: subdir.mk
src/boot/Debug/Drivers/STM32F1xx_HAL_Driver/Src/: subdir.mk
src/mac/: CMakeLists.txt  LoRaMac.h
src/peripherals/: CMakeLists.txt
src/peripherals/onewire/: Ds18B20.c  Ds18B20.h  ds18b20.cpp
src/radio/: CMakeLists.txt
src/radio/sx126x/: radio.c
src/radio/sx1276/: sx1276.c
src/scripts/: cancat_firmware.cmd
src/system/: CMakeLists.txt  FreeRTOSConfig.h  OneWire.c  OneWire.cpp  OneWire.h  adc.c  adc.h  gpio.h  heap_usesNewlib.c  modbus.cpp  modbus.h  spi.h  syscalls.c  systime.h  timer.cpp  timer.h  uart.c  uart.h  utils.h
src/system/FreeRTOS/Source/CMSIS_RTOS/: cmsis_os.c  cmsis_os.h
src/system/FreeRTOS/Source/CMSIS_RTOS_V2/: cmsis_os.h
src/system/FreeRTOS/c++/include/: mem_pool.hpp  semaphore.hpp
src/system/Segger/: SEGGER_RTT_Conf.h  SEGGER_RTT_Syscalls_GCC.c
src/system/Segger/SysView/: SEGGER_SYSVIEW_Conf.h
tools/: stack_profile.c
(+1 files in other folders)
